--- a/src/assets/scss/pages/users.scss
+++ b/src/assets/scss/pages/users.scss
@@ -44,3 +44,28 @@
     }
   }
 }
+
+// rohit css
+
+ul.hp-list {
+  list-style: none;
+  padding: 0 40px;
+}
+li.hp-list-1 {
+  line-height: 35px;
+  border: 1px solid#cccccc52;
+  padding: 10px;
+
+}
+span.hp-list-1 {
+  width: 40%;
+  color: #000;
+  font-weight: 600;
+  font-size: 16px;
+  float: right;
+}
+li.hp-list-1 p{
+  color: #000;
+  font-weight: 600;
+  font-size: 16px;
+}
