--- a/src/assets/scss/core/variables/_variables.scss
+++ b/src/assets/scss/core/variables/_variables.scss
@@ -27,8 +27,8 @@ $blue: #00cfe8; //$info
 $red: #ea5455; //$danger
 $orange: #ff9f43; //$warning
 $green: #28c76f; //$success
-$cyan: #7367f0; //$primary
-
+// $cyan: #7367f0;
+$cyan: #f1661f; //$primary
 $primary: $cyan;
 $info: $blue;
 $warning: $orange;
@@ -47,29 +47,29 @@ $spacers: map-merge(
   (
     0: 0,
     25: (
-      $spacer * 0.25
+      $spacer * 0.25,
     ),
     50: (
-      $spacer * 0.5
+      $spacer * 0.5,
     ),
     75: (
-      $spacer * 0.75
+      $spacer * 0.75,
     ),
     1: (
-      $spacer
+      $spacer,
     ),
     2: (
-      $spacer * 1.5
+      $spacer * 1.5,
     ),
     3: (
-      $spacer * 3
+      $spacer * 3,
     ),
     4: (
-      $spacer * 3.5
+      $spacer * 3.5,
     ),
     5: (
-      $spacer * 4
-    )
+      $spacer * 4,
+    ),
   ),
   $spacers
 );
@@ -113,8 +113,8 @@ $border-radius-sm: 0.25rem;
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: "Montserrat", Helvetica, Arial, serif;
-$font-family-monospace: "Montserrat", Helvetica, Arial, serif;
+$font-family-sans-serif: 'Montserrat', Helvetica, Arial, serif;
+$font-family-monospace: 'Montserrat', Helvetica, Arial, serif;
 
 // stylelint-enable value-keyword-case
 $font-size-base: 1rem;
@@ -216,7 +216,7 @@ $pagination-padding-y-sm: 0.5rem;
 $pagination-padding-x-sm: 0.75rem;
 
 // BreadCrumbs
-$breadcrumb-divider: quote(">>");
+$breadcrumb-divider: quote('>>');
 
 // Cards
 $card-spacer-y: 1.5rem;
